--- a/frontend/public/stylesheets/root.css
+++ b/frontend/public/stylesheets/root.css
@@ -1,3 +1,6 @@
 @import url("./reset.css");
 @import url("./index.css");
 @import url("./general.css");
+@import url("./navbar.css");
+@import url("./welcome.css");
+@import url("./session.css");
