--- a/frontend/public/stylesheets/root.css
+++ b/frontend/public/stylesheets/root.css
@@ -4,3 +4,5 @@
 @import url("./navbar.css");
 @import url("./welcome.css");
 @import url("./session.css");
+@import url("./recipe.css");
+@import url("./item.css");
