--- a/frontend/public/stylesheets/general.css
+++ b/frontend/public/stylesheets/general.css
@@ -2,7 +2,7 @@ html {
     height: 100%;
     display: block;
     min-height: fit-content;
-    overflow: scroll;
+    overflow: auto;
 }
 
 body {
@@ -12,7 +12,6 @@ body {
     background-attachment: fixed;
     background-size: cover;
     margin: 0px 0px 0px 0px;
-    min-height: fit-content;
 }
 
 a, p, h1, h2, h3, label {
@@ -34,6 +33,7 @@ a, p, h1, h2, h3, label {
     text-align: center;
     min-height: fit-content;
     padding-bottom: 100px;
+    /* margin-right: 20%; */
 }
 
 .body-content {
