Style Item index and add button to welcome

--- a/frontend/public/stylesheets/welcome.css
+++ b/frontend/public/stylesheets/welcome.css
@@ -71,8 +71,10 @@
     }
 }
 
-.make-loot {
+.loot-button {
     margin-top: 50px;
+    margin-right: 25px;
+    margin-left: 25px;
     padding: 8px 8px 8px 8px;
     width: 200px;
     align-self: center;
@@ -81,9 +83,10 @@
     background-color: gold;
     height: 40px;
     font-size: 15px;
+    text-decoration: none;
 }
 
-.make-loot:hover {
+.loot-button:hover {
     background-image: linear-gradient(to top right, gold, white);
     cursor: pointer;
 }
