--- a/frontend/public/stylesheets/item.css
+++ b/frontend/public/stylesheets/item.css
@@ -1,3 +1,5 @@
+/* Item creation form */
+
 .item-form-page {
     padding-top: 50px;
 }
@@ -61,4 +63,28 @@ input:focus {
 .item-form button:hover {
     background-image: linear-gradient(to top right, gold, white);
     cursor: pointer;
+}
+
+/* Item index page */
+
+.item-index ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.item-div {
+    padding-bottom: 50px;
+}
+
+.item-div h1 {
+    padding-bottom: 15px;
+}
+
+.item-div img {
+    max-width: 200px;
+    padding-left: 30px;
+    padding-right: 30px;
+    max-height: 140px;
 }
