--- a/frontend/public/stylesheets/games.css
+++ b/frontend/public/stylesheets/games.css
@@ -41,6 +41,13 @@
     width: 100px;
 }
 
+.game-box img {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    max-width: 250px;
+    max-height: 250px;
+}
+
 .game-form input,
 .game-form textarea {
     display: flex;
