Remove extra classnames and add about section

--- a/frontend/public/stylesheets/session.css
+++ b/frontend/public/stylesheets/session.css
@@ -2,7 +2,7 @@
     padding-top: 50px;
 }
 
-.session-form-name {
+.session-form h3 {
     text-transform: capitalize;
     font-size: x-large;
     padding-bottom: 50px;
