--- a/frontend/public/stylesheets/games.css
+++ b/frontend/public/stylesheets/games.css
@@ -16,7 +16,7 @@
     padding-top: 50px;
 }
 
-.game-form-name {
+.game-form h1 {
     text-transform: capitalize;
     font-size: x-large;
     padding-bottom: 50px;
