--- a/frontend/public/stylesheets/general.css
+++ b/frontend/public/stylesheets/general.css
@@ -23,7 +23,7 @@ a, p, h1, h2, h3, label {
     left: 20%;
     right: 20%;
     top: 100px;
-    min-width: 555px;
+    min-width: 650px;
     min-height: 975px;
     text-align: center;
     display: flex;
@@ -33,7 +33,6 @@ a, p, h1, h2, h3, label {
     text-align: center;
     min-height: fit-content;
     padding-bottom: 100px;
-    /* margin-right: 20%; */
 }
 
 .body-content {
@@ -78,4 +77,24 @@ button {
             0 0 70px gold,
             0 0 80px gold;
     }
+}
+
+button, .loot-button {
+    margin-top: 50px;
+    margin-right: 25px;
+    margin-left: 25px;
+    padding: 8px 8px 8px 8px;
+    width: 200px;
+    align-self: center;
+    color: black;
+    font-weight: bold;
+    background-color: gold;
+    height: 40px;
+    font-size: 15px;
+    text-decoration: none;
+}
+
+button:hover, .loot-button:hover {
+    background-image: linear-gradient(to top right, gold, white);
+    cursor: pointer;
 }
