--- a/frontend/public/stylesheets/item.css
+++ b/frontend/public/stylesheets/item.css
@@ -4,7 +4,7 @@
     padding-top: 50px;
 }
 
-.item-form-name {
+.item-form h3 {
     text-transform: capitalize;
     font-size: x-large;
     padding-bottom: 50px;
