--- a/frontend/public/stylesheets/welcome.css
+++ b/frontend/public/stylesheets/welcome.css
@@ -18,7 +18,7 @@
     margin: 0 auto;
     padding-bottom: 20px;
     background-size: cover;
-    background-image: url("../Lootbox.svg");
+    background-image: url("../sprites/Lootbox.svg");
     background-position: center;
 }
 
