--- a/frontend/public/stylesheets/item.css
+++ b/frontend/public/stylesheets/item.css
@@ -30,10 +30,15 @@
 }
 
 .item-form input,
-.item-form textarea {
+.item-form textarea,
+.item-form select {
     display: flex;
     float: right;
     padding: 8px 8px 8px 8px;
+}
+
+select:hover {
+    background-color: gold;
 }
 
 .item-form textarea {
