--- a/frontend/public/stylesheets/recipe.css
+++ b/frontend/public/stylesheets/recipe.css
@@ -1,3 +1,14 @@
+.recipe-show ul li::before {
+    content: "\2022"; 
+    color:gold;
+    list-style: circle;
+}
+
+.recipe-show li {
+    color: gold;
+}
+
+
 .recipe-form-page {
     padding-top: 50px;
 }
