--- a/frontend/public/stylesheets/navbar.css
+++ b/frontend/public/stylesheets/navbar.css
@@ -1,11 +1,24 @@
+header {
+    display: contents;
+}
+
 .navbar {
-    width: 100%;
-    height: 140px;
+    /* display: contents; */
+    padding-bottom: 25px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    height: 120px;
+}
+
+.navbar a {
+    display: flex;
+    height: 80px;
 }
 
 .session-buttons {
-    height: 100%;
-    width: 100%;
+    display: contents;
 }
 
 .signup-button, .login-button, .logout-button {
@@ -15,18 +28,10 @@
     width: 80px;
     height: 80px;
     font-size: 15px;
-}
-
-.signup-button {
-    position: absolute;
-    left: 25px;
-    top: 25px;
-}
-
-.login-button, .logout-button {
-    position: absolute;
-    right: 25px;
-    top: 25px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    line-height: 60px;
 }
 
 .signup-button:hover,
@@ -40,11 +45,11 @@
     -webkit-text-stroke: 1px black;
     font-weight: bolder;
     font-size: 75px;
-    position: absolute;
     width: 210px;
-    top: 25px;
-    left: 50%;
-    margin-left: -105px;
-    /* text-align: center; */
+    padding-top: 30px;
+}
+
+.title-link {
+    text-decoration: none;
 }
 
