--- a/frontend/public/stylesheets/recipe.css
+++ b/frontend/public/stylesheets/recipe.css
@@ -1,12 +1,38 @@
-.recipe-show ul li::before {
-    content: "\2022"; 
-    color:gold;
-    list-style: circle;
+.recipe-index li {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.recipe-box img {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    max-width: 250px;
+    max-height: 250px;
+}
+
+.recipe-show img {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    max-width: 250px;
+    max-height: 250px;
+}
+
+.recipe-links {
+    text-decoration: none;
+}
+
+.recipe-links h1 {
+    text-decoration: underline;
 }
 
 .recipe-show li {
-    color: gold;
+    color: gold;   
 }
+
+.recipe-index p {
+    text-decoration: none;
+}
+
 
 
 .recipe-form-page {
@@ -58,4 +84,25 @@
 .recipe-form-page button:hover {
     background-image: linear-gradient(to top right, gold, white);
     cursor: pointer;
+}
+
+.recipe-list p {
+    justify-self: center;
+}
+
+.recipe-label {
+    text-transform: capitalize;
+    margin-bottom: 15px;
+    text-decoration: underline;
+}
+
+.recipe-part img {
+    max-height: 135px;
+    max-width: 150px;
+    padding-bottom: 15px;
+}
+
+.missing-recipe-img {
+    height: 85px;
+    padding-bottom: 15px;
 }
